--- a/Exploratory Data Analysis(EDA)/Exploratory data analysis(EDA) .ipynb
+++ b/Exploratory Data Analysis(EDA)/Exploratory data analysis(EDA) .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Super Store's Exploratory data analysis(EDA) With Python"
+    "# Exploratory data analysis(EDA) With Python"
    ]
   },
   {
