--- a/Simple Linear Regression/Day4_Simple_Linear_Regression.ipynb
+++ b/Simple Linear Regression/Day4_Simple_Linear_Regression.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Simple Linear Regression\n",
     "\n",
-    "![Simple Linear Regression](Day4.png)"
+    "![Simple Linear Regression](InfoGraphs/Day4.png)"
    ]
   },
   {
